--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
 
+	<link rel="shortcut icon" type="image/jpg" href="images/icon.jpg"/>
+
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -81,7 +83,7 @@
 		<div id="fh5co-intro">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 col-md-pull-2">
-					<h2>My work and projects &amp; so far. <span><em>by</em> <a href="http://zellow-tech.github.io/ze">Shimron Alakkal.</a></span></h2>
+					<h2>My work  &amp; projects curation. <span><em>by</em> <a href="http://zellow-tech.github.io/ze">Shimron Alakkal.</a></span></h2>
 				</div>
 			</div>
 		</div>
