--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<img src="images/bg1.jpg" class="img-responsive" alt="zellow technologies private limited">
 								<div class="desc">
 									<h3>Zellow Technologies</h3>
-									<span>An software MVP specialist for mobile and AI</span>
+									<span>A software MVP specialist for mobile and AI</span>
 								</div>
 							</a>
 						</div>
