--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		<div id="fh5co-intro">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 col-md-pull-2">
-					<h2>My work  &amp; projects curation. <span><em>by</em> <a href="http://zellow-tech.github.io/ze">Shimron Alakkal.</a></span></h2>
+					<h2>My work  &amp; project curation. <span><em>by</em> <a href="http://zellow-tech.github.io/ze">Shimron Alakkal.</a></span></h2>
 				</div>
 			</div>
 		</div>
@@ -161,7 +161,7 @@
 							</a>
 						</div>
 						<div class="col-md-12 animate-box">
-							<a href="#" class="portfolio-grid">
+							<a target=_blank href="https://youtu.be/u4f2fbXy6v8?t=189" class="portfolio-grid">
 								<img src="images/lin.jpg" class="img-responsive" alt="merlach finance">
 								<div class="desc">
 									<h3>Merlach.</h3>
