--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>About Me.</h4>
-					<p>I'm a developer traveling between the US, UAE, and my home, Kerala, to make life happen. I love building stuff and this page is a curation of some of the things I've done over the years. Hit my up if you'd like to chat!</p>
+					<p>A self-taught developer traveling between the US, UAE, and my home, Kerala, to make life happen. 
+					Documenting my journey here on YTB for yall.</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
 					<h4></h4>
