slight ui change

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shimron &mdash; A sneak peak into my work</title>
+	<title>Shimron Alakkal.</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="FA sneak peak into shimron's work life." />
+	<meta name="description" content="I'm a 21 year old building multiple businesses in the fintech space." />
 	<meta name="keywords" content="shimron, shimron alakkal, shimron youtube, raw reality, zellow technologies, zellow, zellow tech, zeltech, merlach, versana, merlach finance, shimron finance, shimron business, business by shimron" />
 	<meta name="author" content="freehtml5.co" />
 
@@ -57,7 +57,7 @@
 			<div class="top-menu">
 				<div class="row">
 					<div class="col-sm-2">
-						<div id="fh5co-logo"><a href="index.html">Shimron<span>.</span></a></div>
+						<div id="fh5co-logo"><a href="index.html">Shimron Alakkal<span>.</span></a></div>
 					</div>
 					<div class="col-sm-10 text-right menu-1">
 						<ul>
@@ -83,7 +83,9 @@
 		<div id="fh5co-intro">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 col-md-pull-2">
-					<h2>My work  &amp; project curation. <span><em>by</em> <a href="http://zellow-tech.github.io/ze">Shimron Alakkal.</a></span></h2>
+					<h2>Companies &amp Products<span>
+						<em> by </em> <a href="http://zellow-tech.github.io/ze">Shimron.</a>
+					</span></h2>
 				</div>
 			</div>
 		</div>
