--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Shimron Alakkal.</title>
+	<title>Shimron Alakkal</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="I'm a 21 year old building multiple businesses in the fintech space." />
+	<meta name="description" content="I'm a 21 year old building multiple businesses in the fintech and logistics space." />
 	<meta name="keywords" content="shimron, shimron alakkal, shimron youtube, raw reality, zellow technologies, zellow, zellow tech, zeltech, merlach, versana, merlach finance, shimron finance, shimron business, business by shimron" />
-	<meta name="author" content="freehtml5.co" />
+	<meta name="author" content="https://shimronalakkal.com" />
 
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<meta property="og:title" content="shimron.alakkal"/>
+	<meta property="og:image" content="https://yt3.googleusercontent.com/XJJiHhoyRJf5xafeckhFucb7rtVREju6PfxWOZ_qO6zXpB2tBQvsKOB62cKBirNjaeFlvCJwlw=s900-c-k-c0x00ffffff-no-rj"/>
+	<meta property="og:url" content="https://www.youtube.com/@salakkal/videos"/>
+	<meta property="og:site_name" content="Shimron Alakkal"/>
+	<meta property="og:description" content="International bridge between Asia and America"/>
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -40,11 +40,7 @@
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
+	
 	</head>
 
 	<body>
@@ -245,15 +241,22 @@
 					</ul>
 				</div>
 
-				<div class="col-md-3">
-					<h4>Contact</h4>
+				<div class="col-md-3 col-md-push-1">
+					<h4></h4>
 					<ul class="fh5co-footer-links">
-						<!-- <li>198 West 21th Street, <br> Suite 721 New York NY 10016</li> -->
-						<li><a href="tel://1234567920">support@shimronalakkal.com</a></li>
-						<li><a href="mailto:info@yoursite.com">shimron@shimronalakkal.com</a></li>
-						<!-- <li><a href="http://gettemplates.co">gettemplates.co</a></li> -->
+						
 					</ul>
 				</div>
+
+				<!-- <div class="col-md-3">
+					<h4>Contact</h4>
+					<ul class="fh5co-footer-links"> -->
+						<!-- <li>198 West 21th Street, <br> Suite 721 New York NY 10016</li> -->
+						<!-- <li><a href="tel://1234567920">support@shimronalakkal.com</a></li>
+						<li><a href="mailto:info@yoursite.com">shimron@shimronalakkal.com</a></li> -->
+						<!-- <li><a href="http://gettemplates.co">gettemplates.co</a></li> -->
+					<!-- </ul>
+				</div> -->
 
 				<div class="col-md-3 col-md-push-1">
 					<h4>My Socials</h4>
