minor text update in description

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
 			<div class="row">
 				<div class="col-md-3 fh5co-widget">
 					<h4>About Me.</h4>
-					<p>A self-taught developer traveling between the US, UAE, and my home, Kerala, to make life happen. 
+					<p>A self-taught developer working in finance -- building Mch. -- and traveling between the US, UAE, and my home, Kerala, to make life happen. 
 					Documenting my journey here on YTB for yall.</p>
 				</div>
 				<div class="col-md-3 col-md-push-1">
