status update in desc of each image view

--- a/index.html
+++ b/index.html
@@ -159,14 +159,15 @@
 							</a>
 						</div>
 						<div class="col-md-12 animate-box">
-							<a target=_blank href="https://youtu.be/u4f2fbXy6v8?t=189" class="portfolio-grid">
-								<img src="images/lin.jpg" class="img-responsive" alt="merlach finance">
+							<a target=_blank href="https://play.google.com/store/apps/details?id=com.zellow.orderflowgeneral" class="portfolio-grid">
+								<img src="images/ofg.jpg" class="img-responsive" alt="orderflow general, billing and invoicing software.">
 								<div class="desc">
-									<h3>Merlach.</h3>
-									<span>A free stock market tool for traders and investors, in dev🧑‍💻</span>
+									<h3>OrderFlow General.</h3>
+									<span>A comprehensive P.O.S. systems for businesses of all scales and sizes</span>
 								</div>
 							</a>
 						</div>
+						
 						<div class="col-md-12 animate-box">
 							<a target=_blank href="https://flyze.vercel.app" class="portfolio-grid">
 								<img src="images/fly.jpg" class="img-responsive" alt="Fly. by zellow">
@@ -187,16 +188,17 @@
 								<img src="images/ytb.jpg" class="img-responsive" alt="shimron alakkal youtube">
 								<div class="desc">
 									<h3>YouTube</h3>
-									<span>A documentation of what I've been and will be doing</span>
+									<span>A documentation of my life, what I've been, and will be doing</span>
 								</div>
 							</a>
 						</div>
+						
 						<div class="col-md-12 animate-box">
-							<a target=_blank href="https://play.google.com/store/apps/details?id=com.zellow.orderflowgeneral" class="portfolio-grid">
-								<img src="images/ofg.jpg" class="img-responsive" alt="orderflow general, billing and invoicing software.">
+							<a target=_blank href="https://youtu.be/qdgB1A0ZX24?t=25" class="portfolio-grid">
+								<img src="images/lin.jpg" class="img-responsive" alt="merlach finance">
 								<div class="desc">
-									<h3>OrderFlow General.</h3>
-									<span>A billing and invoicing software for mobile based P.O.S. systems </span>
+									<h3>Merlach.</h3>
+									<span>A free stock market tool for traders and investors. (Not publicly available)</span>
 								</div>
 							</a>
 						</div>
