link change for zellow's domain

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 col-md-pull-2">
 					<h2>Companies &amp Products<span>
-						<em> by </em> <a href="http://zellow-tech.github.io/ze">Shimron.</a>
+						<em> by </em> <a href="https://zellow.tech">Shimron.</a>
 					</span></h2>
 				</div>
 			</div>
@@ -150,11 +150,11 @@
 				<div class="col-md-6 padding-right">
 					<div class="row">
 						<div class="col-md-12 animate-box">
-							<a target=_blank href="https://zellow-tech.github.io/ze" class="portfolio-grid">
+							<a target=_blank href="https://zellow.tech" class="portfolio-grid">
 								<img src="images/bg1.jpg" class="img-responsive" alt="zellow technologies private limited">
 								<div class="desc">
 									<h3>Zellow Technologies</h3>
-									<span>A software MVP specialist for mobile and AI</span>
+									<span>A private software startup focusing on AI, Finance, and ecommerce.</span>
 								</div>
 							</a>
 						</div>
