--- a/index.html
+++ b/index.html
@@ -236,6 +236,13 @@
 					<p>A self-taught developer working in finance -- building Mch. -- and traveling between the US, UAE, and my home, Kerala, to make life happen. 
 					Documenting my journey here on YTB for yall.</p>
 				</div>
+				<!-- <div class="col-md-3 col-md-push-1">
+					<h4></h4>
+					<ul class="fh5co-footer-links">
+						
+					</ul>
+				</div>
+ -->
 				<div class="col-md-3 col-md-push-1">
 					<h4></h4>
 					<ul class="fh5co-footer-links">
@@ -243,28 +250,21 @@
 					</ul>
 				</div>
 
-				<div class="col-md-3 col-md-push-1">
-					<h4></h4>
-					<ul class="fh5co-footer-links">
-						
-					</ul>
-				</div>
-
-				<!-- <div class="col-md-3">
+				<div class="col-md-3">
 					<h4>Contact</h4>
-					<ul class="fh5co-footer-links"> -->
-						<!-- <li>198 West 21th Street, <br> Suite 721 New York NY 10016</li> -->
-						<!-- <li><a href="tel://1234567920">support@shimronalakkal.com</a></li>
-						<li><a href="mailto:info@yoursite.com">shimron@shimronalakkal.com</a></li> -->
+					<ul class="fh5co-footer-links"> 
+						<!-- <li>198 West 21th Street, <br> Suite 721 New York NY 10016</li>  -->
+					    <li><a href="mailto:support@zellow.tech">support@zellow.tech</a></li>
+						<li><a href="mailto:shimron@zellow.tech">shimron@zellow.tech</a></li> 
 						<!-- <li><a href="http://gettemplates.co">gettemplates.co</a></li> -->
-					<!-- </ul>
-				</div> -->
+					</ul>
+				</div> 
 
 				<div class="col-md-3 col-md-push-1">
 					<h4>My Socials</h4>
 					<ul class="fh5co-footer-links">
 						<li><a target=_blank href="https://instagram.com/shimron.alakkal">Instagram</a></li>
-						<li><a target=_blank href="https://www.youtube.com/@salakkal/videos">YouTube</a></li>
+						<li><a target=_blank href="https://www.youtube.com/@ShimronAlakkal/videos">YouTube</a></li>
 						<li><a target=_blank href="https://www.linkedin.com/in/shimron-alakkal/">LinkedIn</a></li>
 						<li><a target=_blank href="https://open.spotify.com/playlist/6ktVWTnoQTSori3LrsqI5g">Spotify</a></li>
 					</ul>
