--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <div class="portfolio-button">
                             <a href="https://OrderFlow.online" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
                         </div>
-                        <img src="assets/images/Group 5.PNG" class="img-fluid"
+                        <img src="assets/images/Group 5.png" class="img-fluid"
                             alt="Inventory management & commerical logistics">
                     </div>
                 </div>
