--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <span>- Inventory management & commerical logistics</span>
-                            <a href="https://OrderFlow.online">
+                            <a href="https://orderflow.online">
                                 <h3>OrderFlow General</h3>
                             </a>
                         </div>
                         <div class="portfolio-button">
-                            <a href="https://OrderFlow.online" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
+                            <a href="https://orderflow.online" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
                         </div>
                         <img src="assets/images/Group 5.png" class="img-fluid"
                             alt="Inventory management & commerical logistics">
@@ -174,12 +174,12 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <span>- AI, Robotics & Data Analytics</span>
-                            <a href="#gldx">
+                            <a href="https://youtu.be/O7XfgI5zqf4">
                                 <h3>GlDx - Future Technology</h3>
                             </a>
                         </div>
                         <div class="portfolio-button">
-                            <a href="#gldx" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
+                            <a href="https://youtu.be/O7XfgI5zqf4" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
                         </div>
                         <img src="assets/images/Group 4.png" class="img-fluid"
                             alt="GlDx - AI robotics and data crunching technology company">
@@ -191,12 +191,12 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <span>- Education Technology Platform</span>
-                            <a href="#flyze">
+                            <a href="https://flyze.vercel.app">
                                 <h3>Flyze - Study Abroad Platform</h3>
                             </a>
                         </div>
                         <div class="portfolio-button">
-                            <a href="#flyze" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
+                            <a href="https://flyze.vercel.app" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
                         </div>
                         <img src="assets/images/Group 6.png" class="img-fluid" alt="Flyze - Study abroad education platform by Zellow">
                     </div>
@@ -205,12 +205,12 @@
                     <div class="portfolio-container">
                         <div class="portfolio-details">
                             <span>- AI Investment Research</span>
-                            <a href="#merlach">
+                            <a href="https://youtu.be/qdgB1A0ZX24?t=292">
                                 <h3>Merlach - AI Portfolio Management</h3>
                             </a>
                         </div>
                         <div class="portfolio-button">
-                            <a href="#merlach" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
+                            <a href="https://youtu.be/qdgB1A0ZX24?t=292" class="portfolio-link">Learn More <i class="icon ion-md-add-circle"></i></a>
                         </div>
                         <img src="assets/images/Group 7.png" class="img-fluid"
                             alt="Merlach - AI powered investment research and stock prediction platform">
