--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <h3 style="color: #ffffff; font-size: 32px; margin-bottom: 20px;">Zellow</h3>
                 <p style="color: rgba(255,255,255,0.8); font-size: 18px; line-height: 1.8;">
                     <strong>Focus:</strong> MVP Development & Software Solutions<br><br>
-                    Zellow is a software development company specializing in building Minimum Viable Products (MVPs) for startups and enterprises. We help turn ideas into reality by creating scalable, efficient software solutions that validate business concepts and accelerate time-to-market. Our expertise spans web development, mobile applications, and cloud infrastructure.
+                    Zellow is a software development company specializing in building Minimum Viable Products (MVPs) for startups and enterprises. We help turn ideas into reality by creating scalable, efficient software solutions that validate business concepts and accelerate time-to-market. Our expertise spans web development, mobile applications, and AI infrastructure.
                 </p>
             </div>
 
@@ -242,11 +242,11 @@
                 </p>
             </div>
 
-            <div id="flyze" style="padding: 60px 0; border-bottom: 1px solid rgba(255,255,255,0.1);">
-                <h3 style="color: #ffffff; font-size: 32px; margin-bottom: 20px;">Flyze</h3>
+            <div id="merlach" style="padding: 60px 0;">
+                <h3 style="color: #ffffff; font-size: 32px; margin-bottom: 20px;">OrderFlow</h3>
                 <p style="color: rgba(255,255,255,0.8); font-size: 18px; line-height: 1.8;">
-                    <strong>Focus:</strong> Study Abroad & International Education<br><br>
-                    Flyze is an innovative education technology platform developed by Zellow that simplifies the study abroad journey. We connect students with international education opportunities, streamline application processes, and provide comprehensive support for those seeking to pursue their dreams of studying overseas. Our platform bridges the gap between students and global universities, making international education more accessible.
+                    <strong>Focus:</strong> Complete Inventory Management<br><br>
+                    OrderFlow is an easy-to-use inventory management platform for businesses of all scales. A multi-platform tool that uses predictive models from finance and other AI technology to help optimize business management for businesses of all scale.
                 </p>
             </div>
 
@@ -257,6 +257,16 @@
                     Merlach combines my experience in finance and investment management with cutting-edge artificial intelligence. The platform provides sophisticated investment research, stock prediction algorithms, and comprehensive portfolio management tools. By leveraging machine learning and big data analytics, Merlach helps investors make informed decisions and optimize their investment strategies in real-time.
                 </p>
             </div>
+
+            <div id="flyze" style="padding: 60px 0; border-bottom: 1px solid rgba(255,255,255,0.1);">
+                <h3 style="color: #ffffff; font-size: 32px; margin-bottom: 20px;">Flyze</h3>
+                <p style="color: rgba(255,255,255,0.8); font-size: 18px; line-height: 1.8;">
+                    <strong>Focus:</strong> Study Abroad & International Education<br><br>
+                    Flyze is an innovative education technology platform developed by Zellow that simplifies the study abroad journey. We connect students with international education opportunities, streamline application processes, and provide comprehensive support for those seeking to pursue their dreams of studying overseas. Our platform bridges the gap between students and global universities, making international education more accessible.
+                </p>
+            </div>
+
+            
         </div>
     </section>
 
