link target update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:type" content="website">
     <meta property="og:description"
         content="Building the future through innovative businesses in AI, fintech, robotics, and software development. Founder of Zellow, GlDx, Flyze, and Merlach.">
-    <meta property="og:image" content="assets/images/frame_1.jpg">
+    <meta property="og:image" content="assets/images/frame_1.png">
     <meta property="og:image:alt" content="Shimron Alakkal - Tech Entrepreneur">
     <meta property="og:url" content="https://shimronalakkal.com">
 
@@ -26,7 +26,7 @@
     <meta name="twitter:title" content="Shimron Alakkal - Entrepreneur & Tech Innovator">
     <meta name="twitter:description"
         content="Building innovative businesses in AI, fintech, robotics, and software development across UAE, USA, and India.">
-    <meta name="twitter:image" content="assets/images/frame_1.jpg">
+    <meta name="twitter:image" content="assets/images/frame_1.png">
 
     <link rel="canonical" href="https://shimronalakkal.com" />
 
@@ -129,7 +129,7 @@
                     <a href="https://youtu.be/O7XfgI5zqf4?si=6xAXOLbmZfJb8U1A" target="_blank" rel="noopener noreferrer"
                         class="portfolio-link">Watch our vlog<i class="icon ion-md-add-circle"></i></a>
                 </div>
-                <img src="assets/images/frame_1.jpg" class="img-fluid"
+                <img src="assets/images/frame_1.png" class="img-fluid"
                     alt="Glide Dynamics and OrderFlow logistics technology platform">
 
                 <div class="mobile-only margintop-sm">
@@ -218,7 +218,7 @@
                             alt="Merlach - AI powered investment research and stock prediction platform">
                     </div>
                 </div>
-                
+
                 <div class="col-md-6">
                     <div class="portfolio-container">
                         <div class="portfolio-details">
